# microservice_price

./: .gitignore  Dockerfile  LICENSE  README.md  environment.yml  requirements.txt  setup.cfg  setup.py
archive/: Makefile
archive/data/: input_feature_names.json  pipeline.pkl
archive/docs/: conf.py
archive/models/: price_microservice_pipeline.pkl
archive/src/: price_microservice.py
bciavm/: __init__.py  __main__.py
bciavm/core/: config.py
bciavm/exceptions/: exceptions.py
bciavm/objectives/: __init__.py  binary_classification_objective.py  multiclass_classification_objective.py  objective_base.py  regression_objective.py  standard_metrics.py  time_series_regression_objective.py  utils.py
bciavm/pipelines/: __init__.py  component_graph.py  dask_wrapper.py  pipeline_base.py  pipeline_meta.py  regression_pipeline.py  time_series_baselines.py  time_series_regression_pipeline.py  utils.py
bciavm/preprocessing/: utils.py
bciavm/problem_types/: problem_types.py  utils.py
bciavm/utils/: __init__.py  bci_utils.py  cli_utils.py  gen_utils.py  logger.py  (+1 more)
data/: params.json
docs/: Makefile  index.rst  make.bat
models/: price_microservice_pipeline.pkl
notebooks/: Batch Predict.ipynb  Batch Predict.py  Batch Prediction.ipynb  Colab Demo.ipynb  Data Exploration.ipynb  Data Exploration.py  End-to-End Orchestration.ipynb  Hypertuning.ipynb  Model Explainability.ipynb  Model Explainability.py  Train.ipynb  Tune Hyperparameters.ipynb
references/: 1.1-mc-avm-pipeline.md
resources/: 2021-BCI-AVM-About.docx  ~$21-BCI-AVM-About.docx
src/: app.py
(+63 files in other folders)
