[tool:pytest]
python_files = bciavm/tests/*
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning
    ignore::UserWarning
[flake8]
exclude = docs/*
ignore = E501,W504
per-file-ignores =
    **/__init__.py:F401
[metadata]
description-file = README.md
[aliases]
test=pytest
[isort]
forced_separate= bciavm
multi_line_output=3
